// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvoidKeyboard renders correctly 1`] = `
<KeyboardAvoidingView
  behavior="padding"
>
  <Memo(Pressable)
    onPress={[Function]}
  />
</KeyboardAvoidingView>
`;

exports[`AvoidKeyboard renders correctly on android 1`] = `
<KeyboardAvoidingView>
  <Memo(Pressable)
    onPress={[Function]}
  />
</KeyboardAvoidingView>
`;

exports[`AvoidKeyboard uses the correct behavior on Android 1`] = `
<KeyboardAvoidingView
  behavior="position"
>
  <Memo(Pressable)
    onPress={[Function]}
  />
</KeyboardAvoidingView>
`;

exports[`AvoidKeyboard uses the correct behavior on iOS 1`] = `
<KeyboardAvoidingView
  behavior="height"
>
  <Memo(Pressable)
    onPress={[Function]}
  />
</KeyboardAvoidingView>
`;
